A tickle of extra spacing to stop overlap in the headline

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ h1 {
     font-family: "Yanone Kaffeesatz", sans-serif;
     font-size: 4.45em;
     font-weight: bolder;
-    line-height: 0.9em;
+    line-height: 0.95em;
     margin: 0 0 0.4em 0;
 }
 
